--- a/src/app/misc/header/header.component.css
+++ b/src/app/misc/header/header.component.css
@@ -1,8 +1,9 @@
 
 img.titre{
 
- 
+ margin-left: 0;
   height: 100px;
+  margin-right: -20px;
 
 }
 .logo-titre{
@@ -32,7 +33,10 @@ a {
   text-decoration: none;
   color: whitesmoke;
   margin-bottom: 10px;
+  display: flex;
+  flex-direction: row-reverse;
 }
+
 
 .logo a {
   display: flex;
@@ -55,10 +59,11 @@ a {
 
 .logo-link {
   height: 30px;
-  vertical-align: baseline;
-  margin-right: 0;
-  margin-left: 20px;
-  margin-top: 10px;
+  margin-right: 20px;
+
+
+
+  width: auto;
 }
 
 header {
@@ -96,10 +101,10 @@ ul {
   padding: 0 10px;
   display: flex;
   flex-direction: column;
-  align-items: right;
-  
-  
+
+
 }
+
 
 @media screen and (min-width: 768px) {
   header {
@@ -107,7 +112,7 @@ ul {
     justify-content: space-around;
   }
   .title{
-
+width: 60%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -156,7 +161,9 @@ ul {
     display: none;
   }
   .img-titre{
+   
     width:auto;
     margin-top: 20px;
+    margin-right: 0px;
   }
 }
