--- a/src/app/vehicle/vehicle-list/vehicle-list.component.css
+++ b/src/app/vehicle/vehicle-list/vehicle-list.component.css
@@ -2,12 +2,12 @@ h2{
     display: flex;
     justify-content: center;
     text-align: center;
+    margin-bottom: 20px;
 }
 
-
 button{
-  
-    max-width: 60%;
+  height: auto;
+    width: auto;
    justify-content: center;
 
 }
@@ -15,7 +15,7 @@ button{
 .form-liste{
     display: flex;
     flex-direction: column;
-    max-width: 80% ;
+    justify-content: space-around;
     align-items: center;
     margin: auto;
     background-color:rgb(103, 150, 164);
@@ -44,7 +44,22 @@ justify-content: space-around;
 
 form{
     justify-content: center;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
    
+}
+
+input{
+
+    height: 40px;
+}
+
+label {
+
+    cursor: pointer;
+    display: flex;
+    justify-content: space-around;
 }
 
 /* .list ul {
@@ -62,11 +77,14 @@ form{
     color: red;
 }
 @media screen and (min-width: 768px){
+
+
+
 .list{
 display: flex;
 justify-content: space-around;
 flex-wrap: nowrap;
-width: 100%;
+width: auto;
 /* animation-name: scroll;
 animation: scroll 50s linear infinite  ; */
 padding: 10px;
@@ -78,10 +96,21 @@ flex-wrap: nowrap;
 }
 .label {
 
+
     display: flex;
     justify-content: space-around;
 }
 
+form {
+
+    align-items: center;
+}
+input {
+ 
+    justify-content: center;
+
+    width: inherit;
+}
 
 .list:hover{
 
@@ -104,6 +133,7 @@ flex-wrap: nowrap;
 
     margin-bottom: 50px;
     height: 350px;
+    width: 80%;
 }
 }
   /* @keyframes scroll {
