--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
-<<<<<<< HEAD
-html, body {
-    font-family: 'Poppins', sans-serif;
-    background-color: rgb(220, 218, 218);
-=======
 * {
   margin: 0;
   padding: 0;
+  width: 100%;
+
 }
 
 html,
 body {
   font-family: "Poppins", sans-serif;
->>>>>>> 5b0cafc0420c24576e860d40361d93d311d7f91d
 }
 
 
@@ -41,32 +37,21 @@ body {
 }
 
 button {
-<<<<<<< HEAD
  
-     border-radius: 6px;
-     font-weight: 600;
-     background: var(--slate-900, #0F172A);
-        color: var(--slate-100, #F9FAFB);
-        
+    
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    background-color: #538fbe;
+    padding: 10px 70px;
+    border: 1px solid #2d6898;
+ 
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 7.5px );
+  -webkit-backdrop-filter: blur( 7.5px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
 
-}
-
-.btn{
-
-    cursor: pointer;
-
-}
-
-.btn:hover{
-
-    background-color: rgb(26, 26, 102);
-    color: white;
-}
-=======
-  border-radius: 6px;
-  font-weight: 600;
-  background: var(--slate-900, #0f172a);
-  color: var(--slate-100, #f9fafb);
 }
 
 @media screen and (min-width: 768px) {
@@ -74,5 +59,18 @@ button {
     background-image: url("assets/images/backgroundCars.png");
     background-repeat: no-repeat;
   }
+  *{
+    margin: 0;
+    padding: 0;
+    width: auto;
+
+  }
+  @media screen and (min-width: 1024px){
+  *{
+width: auto;
+
+  }
+
+
 }
->>>>>>> 5b0cafc0420c24576e860d40361d93d311d7f91d
+}
