--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -46,7 +46,7 @@
           ><span style="font-weight: bold">M</span>ot de passe</label
         >
         <input
-          type="password"
+          [type]="passwordType"
           id="motDePasse"
           name="motDePasse"
           class="form-control"
@@ -57,13 +57,14 @@
       <div class="form-group form-check">
         <input
           type="checkbox"
-          id="memoriserMotDePasse"
-          name="memoriserMotDePasse"
+          id="afficherMotDePasse"
+          name="afficherMotDePasse"
           class="form-check-input"
-          [(ngModel)]="memoriserMotDePasse"
+          [(ngModel)]="afficherMotDePasse"
+          (click)="updatePasswordVisibility()"
         />
-        <label for="memoriserMotDePasse" class="form-check-label"
-          >Mémoriser mon identifiant</label
+        <label for="afficherMotDePasse" class="form-check-label"
+          >Afficher mot de passe</label
         >
       </div>
       <button class="btn-primary" type="submit" [disabled]="loginForm.invalid">
