--- a/src/app/delete-success-dialog/delete-success-dialog.component.css
+++ b/src/app/delete-success-dialog/delete-success-dialog.component.css
@@ -1,53 +1,41 @@
 /* Styles pour la boîte de dialogue */
 .dialog-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-<<<<<<< HEAD
-    background-color: rgba(109, 134, 167, 0.5); /* Arrière-plan semi-transparent */
-=======
-    background-color: rgba(109, 134, 167, 0.5); 
->>>>>>> ed5990cbcd9f077eb25dba6f68804ad0173d3bfc
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 1000;
-  }
-  
-  .dialog-content {
-    background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-  }
-  h1{
-<<<<<<< HEAD
-    font-size:15px;
-=======
-    font-size:25px;
->>>>>>> ed5990cbcd9f077eb25dba6f68804ad0173d3bfc
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-color: rgba(
+    109,
+    134,
+    167,
+    0.5
+  ); /* Arrière-plan semi-transparent */
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1000;
 }
-    
-  
-  button {
-    font-size: 10px;
-    margin: 5px;
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    background-color: #538fbe;
-    padding: 10px 70px;
-    border: 1px solid #2d6898;
-<<<<<<< HEAD
-=======
 
->>>>>>> ed5990cbcd9f077eb25dba6f68804ad0173d3bfc
-  
-  }
+.dialog-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+h1 {
+  font-size: 15px;
+}
 
- 
+button {
+  font-size: 10px;
+  margin: 5px;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  background-color: #538fbe;
+  padding: 10px 70px;
+  border: 1px solid #2d6898;
+}
