--- a/src/app/misc/header/header.component.html
+++ b/src/app/misc/header/header.component.html
@@ -1,4 +1,7 @@
 <header>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Goblin+One&display=swap" rel="stylesheet">
   <div class="logo">
     <a routerLink="vehicles"
       ><img
@@ -8,7 +11,10 @@
     /></a>
   </div>
 
+  <div class="titre">
+<h1> CARFLEET</h1>
   <h2>La réservation facile de votre véhicule de service</h2>
+  </div>
   <div class="menu">
     <ul>
       <li>
