--- a/src/app/reservation/reservation/reservation.component.css
+++ b/src/app/reservation/reservation/reservation.component.css
@@ -2,8 +2,8 @@
   background-color: #226175;
   display: flex;
   flex-direction: column;
-  padding: 1rem 0 1rem 1rem;
-  gap: 0.5rem;
+  align-items: center;
+  gap: 1rem;
 }
 
 #startDate,
@@ -12,17 +12,27 @@
 }
 
 #reason {
-    width: 16rem;
+  width: 16rem;
 }
 
 #reserveButton {
   display: flex;
-  padding: 0.5rem 1rem;
+  padding: 8vh 30vh 2vh 10vh;
   justify-content: center;
   align-items: center;
   gap: 0.625rem;
-  width: 6rem;
   border-radius: 10px;
   background-color: #3EBDE6;
   align-self: center;
+  margin: 50px;
+}
+
+label {
+  margin: 1vh;
+}
+
+input {
+  padding: 2vh;
+  border-radius: 10px;
+  margin: 1vh 4vh 3vh 2vh;
 }
