Popup creation and cleanup on delete resa and reserve vehicle

--- a/src/app/reservation/reservation-cancel/reservation-cancel.component.html
+++ b/src/app/reservation/reservation-cancel/reservation-cancel.component.html
@@ -6,4 +6,4 @@ du {{reservationCancel.start_Date | date:'dd/MM/yyyy'}} au {{reservationCancel.e
 
 Motif : {{reservationCancel.reason}}.
 
-<button type="button" (click)="cancelConfirm()">Confirmer l'annulation</button>
+<button type="button" (click)="confirmDeleteResa()">Confirmer l'annulation</button>
