--- a/src/app/vehicle/vehicle-search/vehicle-search.component.html
+++ b/src/app/vehicle/vehicle-search/vehicle-search.component.html
@@ -9,6 +9,9 @@
       id="start"
       name="start"
       formControlName="startDate"
+      [(ngModel)]="startDateForm"
+      [min]="todayString"
+      [max]="maxDate"
       required
     /><br />
 
@@ -18,6 +21,8 @@
       id="end"
       name="end"
       formControlName="endDate"
+      [min]="startDateForm"
+      [max]="maxDate"
       required
     /><br />
 
@@ -65,6 +70,8 @@
       Aucun véhicule trouvé.
     </div>
   </form>
+
+  <button (click)="testVehiclesToDisplay()"></button>
 
   <div class="search-card">
     <li *ngFor="let vehicle of vehiclesToDisplay">
