--- a/src/app/misc/header/header.component.html
+++ b/src/app/misc/header/header.component.html
@@ -3,7 +3,7 @@
           <a routerLink="vehicles"><img class="logo-img" src="assets/images/logo_site_carfleet.png" alt="logo"></a>
         </div>
 <div class="title">
-<img class="titre" src="assets/images/title.png" alt="titre">
+  <a routerLink="vehicles">  <img class="titre" src="assets/images/title.png" alt="titre"></a>
 <img class="logo-titre" src="assets/images/sncf_logo_blanc.png" alt="logo sncf">
 <h2> La réservation facile de votre véhicule de service </h2> 
 
