--- a/src/app/reservation/reservation-card/reservation-card.component.css
+++ b/src/app/reservation/reservation-card/reservation-card.component.css
@@ -6,10 +6,11 @@
     margin: 12px auto;
     padding: 2px;
     font-size: medium;
-    border-radius: 5px;
+    border-radius: 10px;
     gap: 0.5rem;
     font-size: small;
     background-color: white;
+    min-height: 100%;
 }
 
 #resaCardHeader {
@@ -17,3 +18,32 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
+
+@media screen and (min-width: 768px) {
+    #cardBox {
+        display: flex;
+        flex-direction: wrap;
+        justify-content: space-between;
+        width: 60vw;
+        height: 100%;
+        margin: 12px auto;
+        padding: 2px;
+        border-radius: 10px;
+        gap: 0.5rem;
+        font-size: small;
+        background-color: white;
+    }
+
+    #resaCardHeader {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        font-size: large;
+    }
+    span{
+
+        font-size: large;
+    }
+}
+    
