--- a/src/app/misc/header/header.component.css
+++ b/src/app/misc/header/header.component.css
@@ -5,6 +5,7 @@ img.titre{
   height: 100px;
   margin-right: -20px;
   margin-top: 20px;
+  width: 150px;
 }
 
 .logo-titre{
@@ -35,7 +36,7 @@ img.titre{
 a {
   text-decoration: none;
   color: whitesmoke;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   display: flex;
   flex-direction: row-reverse;
 }
@@ -200,7 +201,7 @@ width: 60%;
     display: none;
   }
   .img-titre{
-   
+   height: 100px;
     width:auto;
     margin-top: 20px;
     margin-right: 0px;
