--- a/src/app/misc/footer/footer.component.css
+++ b/src/app/misc/footer/footer.component.css
@@ -2,7 +2,7 @@ footer{
     background: rgb(80,78,111);
     background: linear-gradient(90deg, rgba(80,78,111,1) 0%, rgba(15,134,158,1) 100%, rgba(0,212,255,1) 100%, rgba(34,97,117,0.01) 100%);
     color: whitesmoke;
-position:relative;
+position:absolute;
     bottom: 0;
     width: 100%;
     min-height: 130px;
