--- a/src/app/vehicle/vehicle-details/vehicle-details.component.css
+++ b/src/app/vehicle/vehicle-details/vehicle-details.component.css
@@ -26,17 +26,26 @@ h2 {
   font-size: 2em;
   margin-left: 20px;
   line-height: 3em;
-  font-family: "Roboto", sans-serif;
+  font-family: "poppins", sans-serif;
   color: rgb(58, 57, 57);
   display: flex;
-  justify-content: space-around;
+  text-align: center;
+  text-shadow: 1px 1px 1px #3c6e7d ;
+  
+  
+
 }
 
-img {
-  max-width: 100%;
-  display: flex;
-  align-items: center;
-}
+
+  
+  img {
+    width: 600px; /* Largeur fixe */
+    height: 
+    300px; /* Hauteur fixe */
+    display: flex;
+    align-items: center;
+  }
+
 
 
 li {
@@ -45,32 +54,52 @@ li {
   font-family: poppins;
 }
 
-.test7{
-
-  display: inline-flex;
-  align-items: center;
-  
+.charasteristics {
+  display: flex;
+  flex-direction: column;
+  border-top: 1px solid   #3c6e7d;
+  padding-top: 10px; 
 }
 
-button {
-  position: initial;
-  left: calc(100vw - 180px);
-  max-width: 100%;
-  border-radius: 56px;
-  font-weight: 600;
-  background: var(--slate-900, #3c6e7d);
-  color: var(--slate-100, #F9FAFB);
-  margin: 1vh 4vh 3vh 2vh;
-  font-size: 18px;
-  height: 50%;
-  padding: 8px 18px;
 
+
+.charasteristics i,
+.charasteristics img {
+  margin-right: 10px; 
 }
+
 
 .buttonCar {
   display: flex;
   justify-content: space-between;
+  position: relative; /* Ajoutez cette ligne */
 }
+
+.button_reserver button {
+  position: absolute;
+  bottom: 30px;
+  right: 40px;
+  font-weight: 600;
+  background: var(--slate-900, #3c6e7d);
+  color: var(--slate-100, #F9FAFB);
+  font-size: 12px;
+  padding: 8px 18px;
+  border-radius: 56px;
+}
+
+.button_supprimer button {
+  position: absolute;
+  bottom: 30px;
+  left: 40px;
+  font-weight: 600;
+  background: var(--slate-900, rgb(58, 57, 57));
+  color: var(--slate-100, #F9FAFB);
+  font-size: 12px;
+  padding: 8px 18px;
+  border-radius: 56px;
+}
+
+
 
 @media screen and (min-width: 600px){
  .details-container {
@@ -86,6 +115,8 @@ ul {
   font-family: "bruno ace SC";
   font-size: 1em;
 }
+
+
   }
 
 
