--- a/src/app/user/login/login.component.css
+++ b/src/app/user/login/login.component.css
@@ -1,14 +1,14 @@
 /* Style pour le conteneur d'authentification */
-.auth-container {
+/* .auth-container {
   background-color: #226175;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
 
 /* Style pour le formulaire d'authentification */
-.auth-form {
+/* .auth-form {
   background-color: #f8f9fa;
   padding: 20px;
   border-radius: 10px;
@@ -16,56 +16,56 @@
   text-align: left;
   max-width: 400px;
   width: 95%;
-}
+} */
 
 /* Style pour les champs de saisie */
-.form-control {
+/* .form-control {
   margin: 10px 0;
   padding: 5px 10px;
   width: 90%;
   border: 1px solid #ccc;
   border-radius: 5px;
-}
+} */
 
 /* Style pour la case à cocher */
-.form-check {
+/* .form-check {
   text-align: left;
   opacity: 0.4;
-}
+} */
 
 /* Style pour le bouton de connexion */
-.btn-primary {
+/* .btn-primary {
   background-color: #3ebee6;
   color: #fff;
   border: none;
   border-radius: 5px;
   padding: 10px 20px;
   cursor: pointer;
-  margin-top: 10px; /* Ajoutez la marge en haut selon vos besoins */
-}
+  margin-top: 10px; 
+} */
 
 /* Style pour les labels */
-label {
+/* label {
   font-weight: normal;
-}
+} */
 
 /* Style pour le titre */
-h1 {
+/* h1 {
   font-size: 24px;
   margin-bottom: 10px;
-}
+} */
 
 /* Style pour le sous-titre */
-h2 {
+/* h2 {
   opacity: 0.5;
   font-weight: normal;
   font-size: 18px;
   margin-top: 0;
   margin-bottom: 20px;
-  /* Couleur du bouton Connexion */
-}
 
-.invalid-message:before {
+} */
+
+/* .invalid-message:before {
   content: "⚠️ ";
   font-size: 16px;
   margin-right: 5px;
@@ -77,9 +77,127 @@ h2 {
 
 .ng-invalid:not(form) {
   border: 6px solid #f60703;
+} */
+
+/* .invalid-message {
+  font-style: bold;
+  opacity: 1;
+  margin-top: 3px;
+  color: #f60303;
+  font-size: 10px;
+  text-align: left;
+
+  padding: 3px;
+
+  margin-bottom: 17px;
+} */
+
+/* .btn-primary[type="submit"]:disabled {
+  margin-top: 20px;
+  opacity: 0.5;
+  cursor: not-allowed;
+  background-color: grey;
+  color: #00000083;
+}
+.side {
+  display: flex;
+} */
+
+/* .side img {
+  width: 450px;
+  height: 450px;
+} */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.identifiant-group {
+  display: flex;
+  width: 100%;
+  align-items: center;
+}
+/* Container */
+
+.container {
+  display: flex;
+  height: 500px;
+
+  border: 1px solid black;
+  margin: auto;
+  margin-top: 50px;
+  box-shadow: 15px 15px #36778a;
+}
+
+label {
+  flex-basis: 30%;
+}
+
+.mdp {
+  display: flex;
+  align-items: center;
+  margin-bottom: 36px;
+}
+/* .container {
+  width: 100%;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+} */
+/* Login */
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  background-color: whitesmoke;
+  padding: 12px;
+}
+
+/* .form {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+} */
+.form h2 {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  margin: 40px;
+  font-size: 10px;
+  margin-bottom: 70px;
+}
+
+.box {
+  padding: 12px;
+  width: 65%;
+  margin: 15px;
+  border: 1px solid black;
+  outline: none;
+  border-radius: 20px;
+}
+
+#submit {
+  padding: 12px 30px;
+  width: 40%;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+  border: none;
+  outline: none;
+  border-radius: 20px;
+}
+
+.side {
+  display: none;
+}
+
+.side img {
+  display: none;
 }
 
 .invalid-message {
+  justify-content: center;
   font-style: bold;
   opacity: 1;
   margin-top: 3px;
@@ -98,4 +216,58 @@ h2 {
   cursor: not-allowed;
   background-color: grey;
   color: #00000083;
+}
+
+.ng-valid[required] {
+  border: 6px solid #42a948;
+}
+
+.btn-primary {
+  background-color: #3ebee6;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .form {
+    min-width: 100%;
+  }
+
+  .form-group {
+    width: 100%;
+  }
+  .side {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    background-color: whitesmoke;
+  }
+
+  .side img {
+    width: 250px;
+    height: 250px;
+    display: block; /* Affiche l'image */
+  }
+
+  #submit:hover {
+    cursor: pointer;
+    box-shadow: 15px 15px;
+    background-color: #36778a;
+  }
+
+  .identifiant-group {
+    min-width: 100%;
+    flex-direction: column;
+  }
+
+  .mdp {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
 }
