--- a/src/app/misc/contact/contact.component.css
+++ b/src/app/misc/contact/contact.component.css
@@ -1,61 +1,67 @@
 input {
     background-color: lightgray;
-    width: 83%;
     height: 4vh;
     border-radius: 10px;
     text-align: center;
+    box-shadow: 0px -1px 0px 0px #e2e8f0 inset;
+    max-width: 60%;
+
 }
 
-.form-group {
-    background: rgb(80, 78, 111);
-    background: linear-gradient(90deg,
-            rgba(80, 78, 111, 1) 0%,
-            rgba(15, 134, 158, 1) 100%,
-            rgba(0, 212, 255, 1) 100%,
-            rgba(34, 97, 117, 0.01) 100%);
+.contact {
+
+    padding-top: 3%;
+}
+
+form {
+    background-color: rgba(34, 97, 117, 0.8);
+
+
     color: whitesmoke;
     display: flex;
     align-items: center;
     flex-direction: column;
     margin: auto;
+
     text-align: center;
     justify-content: center;
     border-radius: 10px;
     border: 1px solid #eee;
     box-shadow: 08px 08px 10px 5px #818080;
 
-    max-width: 50%;
+    max-width: 90%;
 }
 
-h1 {
-    color: rgb(0, 0, 0);
+
+h1 h2 {
+    color: whitesmoke;
+    font-size: 5, 3 em;
     text-align: center;
-    height: 25px;
+    line-height: 1em;
     justify-content: center;
-    margin: 2vh;
+    margin: 5% 0 5% 0;
+    font-family: "Roboto", sans-serif;
 }
 
+
+#message {
+    height: 16vh;
+    border-radius: 10px;
+    text-align: center;
+    margin: 2vh;
+    max-width: 70%;
+}
 
 
 button {
-  margin: 11px;
+    margin-bottom: 25px;
+    margin-top: 0px;
     background: var(--slate-700, #374151);
     color: var(--slate-100, #f9fafb);
     border: 1px solid var(--slate-700, #374151);
-    padding: 0.5rem 1rem;
-    width: 95%;
-    height: 11vh;
-    display: inline;
-    align-items: center;
-    
-   
-    font-display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    flex-direction: column;
-    
-   
+    padding: 10px;
+    width: 60%;
+    height: 65px;
 }
 
 button:hover {
@@ -67,24 +73,32 @@ button:hover {
 
 @media screen and (min-width: 768px) {
     input {
-        width: 95%;
-        height: 5vh;
+        width: 70%;
+        font-size: large;
     }
 
     button {
-        margin-bottom: 72px;
+        margin-top: 40px;
+        margin-bottom: 50px;
+        max-width: 40%;
+        font-size: large;
     }
+
+    label {
+        font-size: large;
+    }
+
 
     form {
         margin: auto;
-        max-width: 70%;
+        max-width: 80%;
         align-items: center;
     }
 
 
 
     #message {
-        width: 92%;
+        width: 60vh;
         height: 16vh;
         border-radius: 10px;
         text-align: center;
