--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -103,14 +103,11 @@
           !nameInput.invalid || nameInput.pristine || nameInput.value === ''
         "
       >
-        <div *ngIf="nameInput.errors?.['required']" class="invalid-message">
-          Le champ N°CP est obligatoire.
-        </div>
         <div
           *ngIf="nameInput.errors?.['minlength'] || nameInput.errors?.['maxlength']"
           class="invalid-password"
         >
-          Veuillez rentrer un n°CP valide
+          ⚠️ Veuillez rentrer un n°CP valide
         </div>
       </div>
     </div>
@@ -121,6 +118,7 @@
       <input
         type="password"
         name="password"
+        [type]="passwordType"
         class="box"
         placeholder="Mot de passe"
         [(ngModel)]="password"
@@ -128,17 +126,18 @@
       />
     </div>
     <div class="mdp">
-      <label for="afficherMotDePasse" class="form-check-label"
-        >Afficher mot de passe</label
-      >
-      <input
-        type="checkbox"
-        id="afficherMotDePasse"
-        name="afficherMotDePasse"
-        class="form-check-input"
-        [(ngModel)]="afficherMotDePasse"
-        (click)="updatePasswordVisibility()"
-      />
+      <label for="afficherMotDePasse" class="form-check-label">
+        <input
+          type="checkbox"
+          id="afficherMotDePasse"
+          name="afficherMotDePasse"
+          class="form-check-input box"
+          [(ngModel)]="afficherMotDePasse"
+          (click)="updatePasswordVisibility()"
+        />
+
+        <div id="afficher-mdp">Afficher mot de passe</div>
+      </label>
     </div>
     <input type="submit" value="Connexion" id="submit" />
   </form>
