--- a/src/app/user/login/login.component.css
+++ b/src/app/user/login/login.component.css
@@ -1,113 +1,3 @@
-/* Style pour le conteneur d'authentification */
-/* .auth-container {
-  background-color: #226175;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
-
-/* Style pour le formulaire d'authentification */
-/* .auth-form {
-  background-color: #f8f9fa;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  text-align: left;
-  max-width: 400px;
-  width: 95%;
-} */
-
-/* Style pour les champs de saisie */
-/* .form-control {
-  margin: 10px 0;
-  padding: 5px 10px;
-  width: 90%;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-} */
-
-/* Style pour la case à cocher */
-/* .form-check {
-  text-align: left;
-  opacity: 0.4;
-} */
-
-/* Style pour le bouton de connexion */
-/* .btn-primary {
-  background-color: #3ebee6;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 10px 20px;
-  cursor: pointer;
-  margin-top: 10px; 
-} */
-
-/* Style pour les labels */
-/* label {
-  font-weight: normal;
-} */
-
-/* Style pour le titre */
-/* h1 {
-  font-size: 24px;
-  margin-bottom: 10px;
-} */
-
-/* Style pour le sous-titre */
-/* h2 {
-  opacity: 0.5;
-  font-weight: normal;
-  font-size: 18px;
-  margin-top: 0;
-  margin-bottom: 20px;
-
-} */
-
-/* .invalid-message:before {
-  content: "⚠️ ";
-  font-size: 16px;
-  margin-right: 5px;
-}
-
-.ng-valid[required] {
-  border: 6px solid #42a948;
-}
-
-.ng-invalid:not(form) {
-  border: 6px solid #f60703;
-} */
-
-/* .invalid-message {
-  font-style: bold;
-  opacity: 1;
-  margin-top: 3px;
-  color: #f60303;
-  font-size: 10px;
-  text-align: left;
-
-  padding: 3px;
-
-  margin-bottom: 17px;
-} */
-
-/* .btn-primary[type="submit"]:disabled {
-  margin-top: 20px;
-  opacity: 0.5;
-  cursor: not-allowed;
-  background-color: grey;
-  color: #00000083;
-}
-.side {
-  display: flex;
-} */
-
-/* .side img {
-  width: 450px;
-  height: 450px;
-} */
-
 * {
   margin: 0;
   padding: 0;
@@ -121,7 +11,6 @@
   width: 100%;
   align-items: center;
 }
-/* Container */
 
 .container {
   display: flex;
@@ -142,12 +31,7 @@ label {
   justify-content: center;
   margin-bottom: 36px;
 }
-/* .container {
-  width: 100%;
-  padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-} */
-/* Login */
+
 .form {
   display: flex;
   flex-direction: column;
@@ -157,12 +41,6 @@ label {
   padding: 12px;
 }
 
-/* .form {
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-} */
 .form h2 {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   margin: 40px;
@@ -236,10 +114,6 @@ label {
   opacity: 0.5;
   border: 3px solid #f60703;
 }
-/* .ng-invalid:not(form) {
-  opacity: 0.5;
-  border: 3px solid #f60703;
-} */
 
 .btn-primary {
   background-color: #3ebee6;
@@ -269,8 +143,9 @@ label {
 .form-check-label {
   display: flex;
   flex-direction: row-reverse;
-  align-items: center; /* Centre verticalement le contenu */
+  align-items: center;
 }
+/* Version Bureau */
 
 @media screen and (min-width: 768px) {
   #afficher-mdp {
