--- a/src/app/misc/header/header.component.css
+++ b/src/app/misc/header/header.component.css
@@ -124,29 +124,7 @@ ul {
   header {
     display: flex;
     justify-content: space-around;
-    background-image: linear-gradient(
-      135deg,
-      hsl(194deg 55% 30%) 0%,
-      hsl(196deg 43% 34%) 4%,
-      hsl(198deg 36% 39%) 10%,
-      hsl(200deg 30% 43%) 15%,
-      hsl(202deg 26% 47%) 21%,
-      hsl(203deg 23% 51%) 26%,
-      hsl(205deg 23% 54%) 32%,
-      hsl(207deg 23% 58%) 38%,
-      hsl(209deg 24% 62%) 43%,
-      hsl(211deg 24% 66%) 49%,
-      hsl(211deg 24% 66%) 54%,
-      hsl(209deg 24% 62%) 60%,
-      hsl(207deg 23% 58%) 65%,
-      hsl(205deg 23% 54%) 71%,
-      hsl(203deg 23% 51%) 76%,
-      hsl(202deg 26% 47%) 82%,
-      hsl(200deg 30% 43%) 87%,
-      hsl(198deg 36% 39%) 92%,
-      hsl(196deg 43% 34%) 97%,
-      hsl(194deg 55% 30%) 100%
-    );
+    background-color:226175 ;
 
 
   }
