--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,17 @@
 * {
     padding: 0;
     margin: 0;
+    height: 100%;
 }
 
 body {
     background-color: blue;
 }
+
+    #router-footer {
+        display: flex;
+        flex-direction:column;
+        height: 80vh;
+        justify-content: space-between;
+    }
+    
