--- a/src/app/misc/header/header.component.html
+++ b/src/app/misc/header/header.component.html
@@ -1,13 +1,17 @@
 <header>
-        <div class="logo">
+
+  <div class="titre-contain">
           <a routerLink="vehicles"><img class="logo-img" src="assets/images/logo_site_carfleet.png" alt="logo"></a>
-        </div>
-<div class="title">
+       
+
+         
+
   <a routerLink="vehicles">  <img class="titre" src="assets/images/title.png" alt="titre"></a>
 <img class="logo-titre" src="assets/images/sncf_logo_blanc.png" alt="logo sncf">
-<h2> La réservation facile de votre véhicule de service </h2> 
-
 </div>
+
+
+
        
 <div class="menu">
     <ul>
