--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div id="screen">
   <app-header></app-header>
-  <div id="page-content">
+  <div id="router-footer">
+  <div id="page-content"> 
     <router-outlet></router-outlet>
   </div>
   <app-footer></app-footer>
+</div>
 </div>
