--- a/src/app/misc/cookies/cookies.component.css
+++ b/src/app/misc/cookies/cookies.component.css
@@ -1,9 +1,14 @@
 .cookies{
     font-family: Arial, sans-serif;
-    background-color: #8f8d8d; /* Couleur de fond gris */
-    color: whitesmoke; /* Couleur de texte whitesmoke */
-    margin: 0;
-    padding: 20px;
+    background-color: #9dbbc4;
+    color: whitesmoke;
+    margin: auto;
+    width: 90%;
+    border: 1px solid #eee;
+    box-shadow: 0 2px 3px #ccc;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    
   }
   
   h1 {
