--- a/src/app/misc/header/header.component.css
+++ b/src/app/misc/header/header.component.css
@@ -1,16 +1,46 @@
-img.titre {
-  margin-left: 0;
-  height: 100px;
-  margin-right: -20px;
-  margin-top: 20px;
+.titre {
+  height: 55px;
+  display: flex;
   width: 150px;
+
+}
+header {
+  height: 15vh;
+  width: 100%;
+}
+
+.titre-contain {
+  display: flex;
+  flex-direction: row;
+  height: 8vh;
+  width: 90%;
+  background-color: #226175;
+  margin: auto;
+  margin-top: 20px;
+  border-radius: 20px;
+  align-items: center;
+}
+
+.menu {
+  width: 85%;
+  justify-content: center;
+  margin: auto;
+  margin-top: 5px;
+}
+
+.header-contain {
+  width: 90%;
+  height: auto;
+  background-color: #226175;
+  display: none;
+  flex-direction: row;
+  border-radius: 20px;
+  margin: auto;
 }
 
 .logo-titre {
-  width: 20%;
-  height: auto;
-  color: #fbf9f9;
-  padding-top: 20px;
+  width: 10%;
+  height: 30%;
   margin-right: 25px;
 }
 
@@ -20,7 +50,7 @@ img.titre {
   flex-direction: row;
   width: 100%;
   align-items: center;
-  max-height: 150px;
+  height: 10vh;
 }
 
 .logo {
@@ -29,26 +59,31 @@ img.titre {
   margin: 20px;
 }
 
-a {
+/* a {
   text-decoration: none;
   color: whitesmoke;
   margin-bottom: 5px;
+ 
+} */
+
+ul {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
 }
 
-.logo a {
+/* .logo a {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-left: 5px;
   height: 100%;
   font-size: 0px;
-}
+} */
 
 .logo-img {
   max-height: 80%;
   border-radius: 50%;
+  display: none;
 }
 
 .menu {
@@ -58,30 +93,17 @@ a {
 
 .logo-link {
   height: 30px;
-  margin-right: 20px;
+  margin-left: 20px;
 
   width: auto;
 }
 
-header {
-  background-color: #226175;
-  opacity: 0.9;
-  border-bottom: 1px solid #eee;
-  height: 150px;
-  width: 100%;
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  box-shadow: lightgray 3px 3px 7px;
-}
-
-.titre {
+/* .titre {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
+} */
 
 h1 {
   font-family: "bruno ace", "bruno ace pro";
@@ -98,19 +120,23 @@ h2 {
   text-align: center;
 }
 
-ul {
-  padding: 0 10px;
-  display: flex;
-  flex-direction: column;
-}
-
 @media screen and (min-width: 768px) {
   header {
     display: flex;
-    justify-content: space-around;
-    background-color:226175 ;
+    flex-direction: column;
+    justify-content: center;
+    background-color: 226175;
+    height: 26vh;
+  }
 
+ 
 
+  .titre-contain{
+width: 100%;
+    height: 18vh;
+    display: flex;
+    justify-content: space-around; 
+    margin: 0%;
   }
 
   .title {
@@ -128,8 +154,9 @@ ul {
     font-size: large;
   }
 
-  .logo {
-    height: 100%;
+  .logo-img {
+    height: 110px;
+    display: inline-block;
   }
 
   .logo-link {
@@ -139,7 +166,9 @@ ul {
   ul {
     list-style: none;
     align-items: center;
-    padding: 0;
+    width: 100%;
+    justify-content: space-around;
+    background-color: #226175;
   }
 
   a {
@@ -147,10 +176,12 @@ ul {
     color: whitesmoke;
     text-decoration: none;
     display: flex;
+    width: 20%;
   }
 
   .menu {
     font-size: 15px;
+    margin:auto;
   }
 
   .logo {
@@ -159,14 +190,30 @@ ul {
     margin: 20px;
   }
 
-  .logo-titre {
-    display: none;
+  .titre {
+height: 10vh;
+    width: auto;
+    margin: 0;
+
+  }
+
+  img.logo-titre {
+    height: 40%;
+    width: auto;
+    margin: 0%;
+    aspect-ratio: 16 / 9;
   }
 
   .img-titre {
-    height: 100px;
-    width: auto;
+    height: auto;
+    width: 420px;
     margin-top: 20px;
     margin-right: 0px;
   }
+
+header{
+
+  background-color: #226175;
+}
+
 }
