--- a/src/app/user/login/login.component.css
+++ b/src/app/user/login/login.component.css
@@ -14,8 +14,9 @@
 
 .container {
   display: flex;
-  height: 500px;
-
+  width: 90%;
+  height: auto;
+  background-color: whitesmoke;
   border: 1px solid black;
   margin: auto;
   margin-top: 50px;
@@ -57,7 +58,7 @@ label {
   border-radius: 20px;
 }
 
-#submit {
+/* #submit {
   padding: 12px 30px;
   width: 40%;
   background-color: black;
@@ -66,13 +67,19 @@ label {
   border: none;
   outline: none;
   border-radius: 20px;
+} */
+
+button {
+
+  max-width: 40%;
+  height: 35px;
 }
 
 .side {
   display: none;
 }
 
-.side img {
+ img {
   display: none;
 }
 
@@ -97,13 +104,13 @@ label {
   margin-right: 5px;
 }
 
-.btn-primary[type="submit"]:disabled {
+/* .btn-primary[type="submit"]:disabled {
   margin-top: 20px;
   opacity: 0.5;
   cursor: not-allowed;
   background-color: grey;
   color: #00000083;
-}
+} */
 
 .ng-valid[required] {
   opacity: 0.5;
@@ -115,7 +122,7 @@ label {
   border: 3px solid #f60703;
 }
 
-.btn-primary {
+/* .btn-primary {
   background-color: #3ebee6;
   color: #fff;
   border: none;
@@ -123,22 +130,22 @@ label {
   padding: 10px 20px;
   cursor: pointer;
   margin-top: 10px;
-}
+} */
 
 #afficher-mdp {
-  font-size: 9px;
+  font-size: small ;
   font-style: italic;
-  opacity: 0.3;
+  opacity: 0.6;
 }
 
-.btn-primary[type="submit"]:disabled {
+/* .btn-primary[type="submit"]:disabled {
   margin-top: 20px;
   opacity: 0.5;
   cursor: no-drop;
   background-color: grey;
 
   color: #00000083;
-}
+} */
 
 .form-check-label {
   display: flex;
@@ -148,29 +155,34 @@ label {
 /* Version Bureau */
 
 @media screen and (min-width: 768px) {
+
+.container{
+
+  max-width: 70%;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+}
+
   #afficher-mdp {
     margin-right: 10px;
   }
   .form {
     max-width: 50%;
+  
   }
 
   .form-group {
     width: 100%;
   }
-  .side {
+  /* .side {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 50%;
     background-color: whitesmoke;
-  }
+  } */
 
-  .side img {
-    width: 250px;
-    height: 250px;
-    display: block; /* Affiche l'image */
-  }
 
   #submit:hover {
     cursor: pointer;
@@ -188,4 +200,23 @@ label {
     justify-content: center;
     width: 100%;
   }
+
+  button {
+    width: 30%;
+    height: 35px;
+  }
+
+ img {
+
+display: flex;
+
+width: 25%;
+height: 35%;
+
+align-items: center;
+justify-content: center;
+ }
+
+
+
 }
