--- a/src/app/vehicle/vehicle-list/vehicle-list.component.html
+++ b/src/app/vehicle/vehicle-list/vehicle-list.component.html
@@ -1,4 +1,5 @@
-<h2>Trouvez rapidement un véhicule de service !</h2>
+
+<div class="test">
 <div class="form-liste">
   <form #f="ngForm" (submit)="onSubmit()">
     <label for="debutreservation">Début de la réservation</label><br>
@@ -19,3 +20,4 @@
 
 </div>
 
+</div>
