--- a/src/app/vehicle/vehicle-search/vehicle-search.component.css
+++ b/src/app/vehicle/vehicle-search/vehicle-search.component.css
@@ -1,7 +1,8 @@
 .searchpage {
 
-  padding-top: 10%;
-margin-bottom: 15%;
+ border: none ;
+margin-bottom: 10%;
+margin-top: 10%;
 }
 
 h2 {
@@ -45,10 +46,6 @@ input {
   text-align: center;
 }
 
-.search-card {
-  border: 1px solid #ccc;
-  border-radius: 10px;
-}
 
 select {
   width: 60%;
@@ -82,9 +79,7 @@ button:hover {
 li {
   list-style-type: none;
   text-decoration: none;
-  /* padding: 10px; */
   margin: 0;
-  color: white;
   display: block;
   font-size: 1em;
   text-align: center;
