--- a/src/app/vehicle/vehicle-search/vehicle-search.component.html
+++ b/src/app/vehicle/vehicle-search/vehicle-search.component.html
@@ -1,4 +1,4 @@
-9<div class="searchpage">
+<div class="searchpage">
   <form [formGroup]="searchForm" (submit)="onSubmit()">
     <h2>Recherche détaillée de véhicule</h2>
 
@@ -70,7 +70,7 @@
       Aucun véhicule trouvé.
     </div>
   </form>
-
+</div>
 
 
   <div class="search-card">
@@ -80,4 +80,4 @@
       </app-vehicle-card>
     </li>
   </div>
-</div>
+
