--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,17 +1,27 @@
 * {
     padding: 0;
     margin: 0;
-    height: 100%;
+    /* height: 100%; */
 }
 
 body {
     background-color: blue;
+    min-height: 100vh;
 }
+#page-content{
 
+    min-height: 70vh;
+}
     #router-footer {
         display: flex;
         flex-direction:column;
-        height: 80vh;
+      
         justify-content: space-between;
     }
     
+    footer{
+
+        position: fixed;
+        bottom: 0;
+
+    }
