--- a/src/app/misc/header/header.component.css
+++ b/src/app/misc/header/header.component.css
@@ -2,8 +2,12 @@
   height: 55px;
   display: flex;
   width: 150px;
-
 }
+.quote {
+  display: none;
+  color: white;
+}
+
 header {
   height: 15vh;
   width: 100%;
@@ -28,29 +32,9 @@ header {
   margin-top: 5px;
 }
 
-.header-contain {
-  width: 90%;
-  height: auto;
-  background-color: #226175;
-  display: none;
-  flex-direction: row;
-  border-radius: 20px;
-  margin: auto;
-}
-
-.logo-titre {
+.logo-sncf {
   width: 10%;
-  height: 30%;
   margin-right: 25px;
-}
-
-.title {
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  width: 100%;
-  align-items: center;
-  height: 10vh;
 }
 
 .logo {
@@ -59,28 +43,12 @@ header {
   margin: 20px;
 }
 
-/* a {
-  text-decoration: none;
-  color: whitesmoke;
-  margin-bottom: 5px;
- 
-} */
-
 ul {
   display: flex;
   flex-direction: row;
 }
 
-/* .logo a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 5px;
-  height: 100%;
-  font-size: 0px;
-} */
-
-.logo-img {
+.logo-car {
   max-height: 80%;
   border-radius: 50%;
   display: none;
@@ -97,13 +65,6 @@ ul {
 
   width: auto;
 }
-
-/* .titre {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-} */
 
 h1 {
   font-family: "bruno ace", "bruno ace pro";
@@ -127,23 +88,22 @@ h2 {
     justify-content: center;
     background-color: 226175;
     height: 26vh;
+    background-color: #226175;
+  }
+  .logo-desk {
+    display: flex;
   }
 
- 
+  .quote {
+    justify-content: center;
+  }
 
-  .titre-contain{
-width: 100%;
+  .titre-contain {
+    width: 100%;
     height: 18vh;
     display: flex;
-    justify-content: space-around; 
-    margin: 0%;
-  }
-
-  .title {
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
+    margin-top: 20px;
   }
 
   h2 {
@@ -152,11 +112,6 @@ width: 100%;
     margin-bottom: 35px;
     max-width: 50%;
     font-size: large;
-  }
-
-  .logo-img {
-    height: 110px;
-    display: inline-block;
   }
 
   .logo-link {
@@ -181,7 +136,7 @@ width: 100%;
 
   .menu {
     font-size: 15px;
-    margin:auto;
+    margin: auto;
   }
 
   .logo {
@@ -190,30 +145,17 @@ width: 100%;
     margin: 20px;
   }
 
+  .logo-car,
+  .logo-sncf,
+  .quote {
+    margin: 0 20px;
+    display: flex;
+  }
+  .logo-img {
+    height: 16vh;
+    border-radius: 50%;
+  }
   .titre {
-height: 10vh;
-    width: auto;
-    margin: 0;
-
+    height: 10vh;
   }
-
-  img.logo-titre {
-    height: 40%;
-    width: auto;
-    margin: 0%;
-    aspect-ratio: 16 / 9;
-  }
-
-  .img-titre {
-    height: auto;
-    width: 420px;
-    margin-top: 20px;
-    margin-right: 0px;
-  }
-
-header{
-
-  background-color: #226175;
-}
-
 }
