--- a/src/app/misc/header/header.component.html
+++ b/src/app/misc/header/header.component.html
@@ -1,15 +1,13 @@
 <header>
 
   <div class="titre-contain">
-          <a routerLink="vehicles"><img class="logo-img" src="assets/images/logo_site_carfleet.png" alt="logo"></a>
-       
-
-         
-
+          <a class="logo-car" routerLink="vehicles"><img class="logo-img" src="assets/images/logo_site_carfleet.png" alt="logo"></a>
+      
   <a routerLink="vehicles">  <img class="titre" src="assets/images/title.png" alt="titre"></a>
-<img class="logo-titre" src="assets/images/sncf_logo_blanc.png" alt="logo sncf">
-</div>
+<img class="logo-sncf" src="assets/images/sncf_logo_blanc.png" alt="logo sncf">
+<div class="quote">La reservation facile de votre vehicule de service</div>
 
+</div>
 
 
        
