--- a/src/app/misc/header/header.component.css
+++ b/src/app/misc/header/header.component.css
@@ -54,6 +54,10 @@ ul {
   display: none;
 }
 
+#logo-car-div {
+  display: none;
+}
+
 .menu {
   font-size: 0px;
   margin-right: 25px;
@@ -80,6 +84,7 @@ h2 {
     justify-content: center;
     height: 26vh;
     background-color: #226175;
+    padding-bottom: 10px;
   }
 
   .logo-desk {
@@ -88,6 +93,11 @@ h2 {
 
   .quote {
     justify-content: center;
+  }
+
+  #title-car-link {
+    position: relative;
+    left: calc(50% - 75px);
   }
 
   .titre-contain {
@@ -141,7 +151,11 @@ h2 {
   .logo-sncf,
   .quote {
     margin: 0 20px;
-    display: flex;
+    display: initial;
+  }
+
+  #logo-car-div {
+    display: initial;
   }
 
   .logo-img {
@@ -150,6 +164,7 @@ h2 {
   }
 
   .titre {
-    height: 10vh;
+    height: 5vh;
+    transform: scale(1.5);
   }
 }
