Tweaked error message in contactForm, added color to error message

--- a/src/app/misc/contact/contact.component.html
+++ b/src/app/misc/contact/contact.component.html
@@ -1,20 +1,19 @@
 
 <div class="contact">
-    <form [formGroup]="searchForm" (submit)="onSubmit()">
+    <form [formGroup]="searchForm" (submit)="searchForm.valid && onSubmit()">
         <h1>Formulaire de contact</h1>
 
 
         <label for="firstname">NOM</label>
         <input type="text" id="firstname" formControlName="firstname" required>
-        <div *ngIf="formSubmitted && searchForm.get('firstname')?.hasError('required')" class="error-message">
+        <div *ngIf="formSubmitted && searchForm.get('firstname')?.hasError('required')" class="error-message" class="error-form">
             Champ requis
-
         </div>
 
 
         <label for="lastname">PRENOM</label>
         <input type="text" id="lastname" formControlName="lastname" required>
-        <div *ngIf="formSubmitted && searchForm.get('lastname')?.hasError('required')" class="error-message">
+        <div *ngIf="formSubmitted && searchForm.get('lastname')?.hasError('required')" class="error-message" class="error-form">
             Champ requis
         </div>
 
@@ -22,10 +21,10 @@
 
         <label for="email">Email</label>
         <input type="email" id="email" formControlName="email" required>
-        <div *ngIf="formSubmitted && searchForm.get('email')?.hasError('required')" class="error-message">
+        <div *ngIf="formSubmitted && searchForm.get('email')?.hasError('required')" class="error-message" class="error-form">
             Champ requis
         </div>
-        <div *ngIf="formSubmitted && searchForm.get('email')?.hasError('email')" class="error-message">
+        <div *ngIf="formSubmitted && searchForm.get('email')?.hasError('email')" class="error-message" class="error-form">
             Adresse email invalide
         </div>
 
@@ -33,17 +32,16 @@
 
         <label for="message">Message</label>
         <textarea id="message" formControlName="message" required></textarea>
-        <div *ngIf="formSubmitted && searchForm.get('message')?.hasError('required')" class="error-message">
+        <div *ngIf="formSubmitted && searchForm.get('message')?.hasError('required')" class="error-message" class="error-form">
             Champ requis
         </div>
 
 
-        <div *ngIf="formSubmitted && searchForm.hasError('atLeastOneSelectRequired')" class="error-message">
+        <div *ngIf="formSubmitted && searchForm.hasError('atLeastOneSelectRequired')" class="error-message" class="error-form">
             Veuillez remplir au moins un champ
         </div>
 
-        <button type="submit"
-        [disabled]="!searchForm.valid">Envoyer
+        <button type="submit" (click)="formTrySubmit()">Envoyer
     </button>
        
     </form>
